--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.3",
